--- a/build.gradle
+++ b/build.gradle
@@ -2,12 +2,14 @@
 buildscript {
     ext.kotlin_version = "1.3.72"
     repositories {
-        google()
+        google()  // Google's Maven repository
         jcenter()
     }
     dependencies {
         classpath "com.android.tools.build:gradle:4.0.0"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath 'com.google.gms:google-services:4.3.3'
+
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -16,7 +18,7 @@ buildscript {
 
 allprojects {
     repositories {
-        google()
+        google()  // Google's Maven repository
         jcenter()
     }
 }
